--- a/.air.toml
+++ b/.air.toml
@@ -11,7 +11,7 @@ tmp_dir = "tmp"
   exclude_file = []
   exclude_regex = ["_test.go", "_templ\\.go$"]
   exclude_unchanged = false
-  follow_symlink = false0000000000
+  follow_symlink = false
   full_bin = ""
   include_dir = []
   include_ext = ["go", "tpl", "tmpl", "html", "templ"]
